--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,9 @@
 <packages>
   <package id="MaterialDesignColors" version="2.0.6" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.5.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
